--- a/ldap-verdaccio/conf/config.yaml
+++ b/ldap-verdaccio/conf/config.yaml
@@ -41,33 +41,30 @@ auth:
 # a list of other known repositories we can talk to
 uplinks:
   npmjs:
-    url: https://registry.npmjs.org/
+    url: https://registry.npm.taobao.org/
 
 packages:
   '@scope/*':
     # scoped packages
-    access: marpontes zach leonardo
+    access: $authenticated
     publish: $authenticated
-    proxy: npmjs
   '@*/*':
     # scoped packages
-    access: $all
+    access: $authenticated
     publish: $authenticated
-    proxy: npmjs
   '**':
     # allow all users (including non-authenticated users) to read and
     # publish all packages
     #
     # you can specify usernames/groupnames (depending on your auth plugin)
     # and three keywords: "$all", "$anonymous", "$authenticated"
-    access: $all
+    access: $authenticated
 
     # allow all known users to publish packages
     # (anyone can register by default, remember?)
     publish: $authenticated
 
     # if package is not available locally, proxy requests to 'npmjs' registry
-    proxy: npmjs
 
 # log settings
 logs:
