--- a/ldap-verdaccio/verdaccio-ldap/Dockerfile
+++ b/ldap-verdaccio/verdaccio-ldap/Dockerfile
@@ -1,4 +1,4 @@
 FROM verdaccio/verdaccio:4.2.2
 USER root
-RUN npm i && npm i verdaccio-ldap
+RUN npm i --registry=https://registry.npm.taobao.org && npm i verdaccio-ldap --registry=https://registry.npm.taobao.org
 USER verdaccio
